--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
   font-size: 125%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #111111;
 }
 
 .container {
@@ -25,7 +30,7 @@ body {
 }
 
 .result {
-  margin: 1.25vh 3.5vw;
+  margin: 1.75vh 3.5vw;
   font-size: 400%;
   color: #ededed;
 }
