--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
   font-size: 125%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   background-color: #111111;
+  height: 100vh;
 }
 
 .container {
@@ -55,7 +55,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 175%;
+  font-size: 200%;
 }
 
 .button:hover {
