--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
-  font-size: 125%;
+  font-size: 2vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-color: #111111;
   height: 100vh;
@@ -27,11 +28,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 1.4vh !important;
 }
 
 .result {
   margin: 1.75vh 3.5vw;
-  font-size: 400%;
+  font-size: 8vh;
   color: #ededed;
 }
 
@@ -55,7 +57,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 200%;
+  font-size: 3.8vh;
 }
 
 .button:hover {
@@ -68,7 +70,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 175%;
+  font-size: 6vh;
   background-color: #44ff4b;
 }
 
@@ -89,6 +91,7 @@ body {
 }
 
 #dark {
+  font-size: 4vh;
   background-color: #333333;
   color: #ededed;
 }
