--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   height: 100vh;
 }
 
+.inactive {
+  display: none !important;
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -20,7 +24,9 @@ body {
   width: 30vw;
   background-color: #333333;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
 }
 
 #navBar {
@@ -32,9 +38,15 @@ body {
 }
 
 .result {
-  margin: 1.75vh 3.5vw;
+  margin: 1.5vh 3.5vw;
   font-size: 8vh;
   color: #ededed;
+}
+
+.buffer {
+  margin: 1.75vh 3.5vw;
+  font-size: 2vh;
+  color: #999999;
 }
 
 .row {
@@ -91,7 +103,7 @@ body {
 }
 
 #dark {
-  font-size: 4vh;
+  font-size: 2.5vw;
   background-color: #333333;
   color: #ededed;
 }
