--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   display: none !important;
 }
 
+.hidden {
+  color: #333333 !important;
+}
+
 .container {
   display: flex;
   align-items: center;
